Fix quotes on project bob

--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
                 <li>Project: Deadlocked Philosophers, a simulation illustrating the Dining Philosophers and Resource Deadlock ideas</li></ul>
             </li>
             <li>CIS4914 - Senior Project (<a href="http://www.cise.ufl.edu/~mssz/">Dr. Mark S. Schmalz</a>, <a href="http://www.cise.ufl.edu/~dts/">Dave Small</a>)<ul>
-                <li>Project: "<a href="https://sourceforge.net/projects/ufseniorproject/">Project: Bob</a>" - a team-based rapidly developed networked 3-D turn-based strategy game.</li></ul>
+                <li>Project: “<a href="https://sourceforge.net/projects/ufseniorproject/">Project: Bob</a>” - a team-based rapidly developed networked 3-D turn-based strategy game.</li></ul>
             </li>
             <li>COT4501 - Numerical Analysis - A Computational Approach (<a href="http://www.math.ufl.edu/~rs/">Dr. Rick L. Smith</a>)</li>
         </ul></li>
