Add consistent project periods (literal)

--- a/index.html
+++ b/index.html
@@ -398,11 +398,11 @@
 <section id="projects">
     <h2>Recent Software Projects</h2>
     <ul>
-        <li><a href="https://github.com/oduwsdl/ipwb"><em>InterPlanetary Wayback (ipwb)</em></a> - Integration of WARCs into IPFS for more redundant and persistent web archives</li>
-        <li><a href="https://github.com/thing342/mobilememento"><em>Mobile Mink</em></a> - Android application for aggregating and accessing mobile and desktop mementos</li>
-        <li><a href="https://github.com/machawk1/mink"><em>Mink</em></a> - Chrome extension to integrate the live and archived web using Memento</li>
-        <li><a href="https://github.com/machawk1/tachyon"><em>Tachyon</em></a> - Time travel for the web. Memento browser plugin for Google Chrome</li>
-        <li><a href="http://matkelly.com/wail"><em>Web Archiving Integration Layer (WAIL)</em></a> - One-Click User Instigated Preservation</li>
+        <li><a href="https://github.com/oduwsdl/ipwb"><em>InterPlanetary Wayback (ipwb)</em></a> - Integration of WARCs into IPFS for more redundant and persistent web archives.</li>
+        <li><a href="https://github.com/thing342/mobilememento"><em>Mobile Mink</em></a> - Android application for aggregating and accessing mobile and desktop mementos.</li>
+        <li><a href="https://github.com/machawk1/mink"><em>Mink</em></a> - Chrome extension to integrate the live and archived web using Memento.</li>
+        <li><a href="https://github.com/machawk1/tachyon"><em>Tachyon</em></a> - Time travel for the web. Memento browser plugin for Google Chrome.</li>
+        <li><a href="http://matkelly.com/wail"><em>Web Archiving Integration Layer (WAIL)</em></a> - One-Click User Instigated Preservation.</li>
         <li><a href="http://matkelly.com/warcreate"><em>WARCreate</em></a> - Google Chrome extension to allow a user to create a Web ARCive (WARC) file from any webpage.</li>
         <li><a href="http://www.cs.odu.edu/~mkelly/reversearchiveit/reverseArchiveIt05102011.crx"><em>Reverse Archive-It</em></a> - Quick prototype to determine the collections to which a webpage has been associated by <a href="https://archive-it.org">Archive-It</a>. (<a href="http://www.cs.odu.edu/~mkelly/reversearchiveit/reverseArchiveItDemo.avi">video demo</a>)</li>
         <li><a href="https://addons.mozilla.org/en-US/firefox/addon/archivefacebook/"><em>ArchiveFacebook</em></a> - Mozilla Firefox add-on to allow a user to easily download and save the contents of his/her Facebook profile.</li>
