--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <h1 itemprop="name">Mat Kelly</h1>
       <h2 itemprop="title">PhD Student, Computer Science</h2>
       <h3 itemprop="affiliation">Web Science &amp; Digital Libraries Research Group</h3>
-      <h3 itemprop="affiliation">Old Dominion University</h3>
+      <h3 itemprop="affiliation">Old Dominion University &bull; Norfolk, Virginia &bull; USA</h3>
       <!--<a href="http://www.cs.odu.edu/~mkelly" onclick="screenshotTest();return false;">
         <img src="amish.jpg" alt="mug shot" id="openMenu" itemprop="photo" />
       </a>//future work -->
