Add JCDL2018 position.

--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
     <section id="recognitionAndParticipation">
       <h2>Recognition &amp; Participation</h2>
       <ul>
+        <li>Publicity Chair, <a href="https://2018.jcdl.org/cfp.html">Joint Conference on Digital Libraries (JCDL) 2018</a></li>
         <li>Best Poster for <a href="papers/2017_jcdl_countingMementos.pdf">“Impact of URI Canonicalization on Memento Count”</a> at the ACM/IEEE Joint Conference on Digital Libraries (JCDL), June 2017.</li>
         <li>Participant and Presenter, <a href="http://archivesunleashed.com/au4-0-british-invasion/">Archives Unleashed 4.0: Web Archive Datathon</a>, June 2017.</li>
         <li>Reviewer, <a href="http://accessconference.ca/">Access 2017</a>, May 2017.</li>
