--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
     <section id="recognitionAndParticipation">
       <h2>Recognition &amp; Participation</h2>
       <ul>
-        <li>Publicity Chair, <a href="https://2018.jcdl.org/cfp.html">Joint Conference on Digital Libraries (JCDL) 2018</a></li>
-        <li>Best Poster for <a href="papers/2017_jcdl_countingMementos.pdf">“Impact of URI Canonicalization on Memento Count”</a> at the ACM/IEEE Joint Conference on Digital Libraries (JCDL), June 2017.</li>
+        <li>Publicity Chair, <a href="https://2018.jcdl.org/cfp.html">Joint Conference on Digital Libraries (JCDL) 2018</a>.</li>
+        <li><a href="http://jcdl.org/awards.php">Best Poster</a> for <a href="papers/2017_jcdl_countingMementos.pdf">“Impact of URI Canonicalization on Memento Count”</a> at the ACM/IEEE Joint Conference on Digital Libraries (JCDL), June 2017.</li>
         <li>Participant and Presenter, <a href="http://archivesunleashed.com/au4-0-british-invasion/">Archives Unleashed 4.0: Web Archive Datathon</a>, June 2017.</li>
         <li>Reviewer, <a href="http://accessconference.ca/">Access 2017</a>, May 2017.</li>
         <li>Scholarship Awardee, <a href="https://www.rjionline.org/stories/graduate-students-receive-scholarships-to-attend-digital-news-preservati">Donald W. Reynolds Journalism Institute</a>, October 2016.</li>
@@ -122,8 +122,8 @@
         <li>Invited Participant and Presenter, <a href="http://archivesunleashed.com/au2-0-library-of-congress/">Archives Unleashed 2.0: Web Archive Datathon</a>, June 2016.</li>
         <li>Invited Participant, <a href="http://archivesunleashed.ca">Archives Unleashed: Web Archive Hackathon</a>, March 2016.</li>
         <li>Sole Presenter, Old Dominion University Department of Computer Science PhD Gathering, November 2015.</li>
-        <li>Best Poster for <a href="papers/2015_jcdl_mobileMink.pdf">“Mobile Mink: Merging Mobile and Desktop Archived Webs”</a> at the ACM/IEEE Joint Conference on Digital Libraries (JCDL), June 2015.</li>
-        <li>Best Student Paper for <a href="http://www.cs.odu.edu/~mkelly/papers/2014_dl_damage.pdf">“Not All Mementos Are Created Equal: Measuring The Impact Of Missing Resources”</a> at ACM/IEEE Digital Libraries 2014, September 2014.</li>
+        <li><a href="http://jcdl.org/awards.php">Best Poster</a> for <a href="papers/2015_jcdl_mobileMink.pdf">“Mobile Mink: Merging Mobile and Desktop Archived Webs”</a> at the ACM/IEEE Joint Conference on Digital Libraries (JCDL), June 2015.</li>
+        <li><a href="http://jcdl.org/awards.php">Best Student Paper</a> for <a href="http://www.cs.odu.edu/~mkelly/papers/2014_dl_damage.pdf">“Not All Mementos Are Created Equal: Measuring The Impact Of Missing Resources”</a> at ACM/IEEE Digital Libraries 2014, September 2014.</li>
         <li>NASA <a href="http://vsgc.odu.edu/sf/gradfellow/">Virginia Space Grant Consortium</a> <a href="http://vsgc.odu.edu/awardees/20142015/">Graduate Fellow</a>, August 2014.</li>
         <li><a href="http://www.cs.odu.edu/~mkelly/presentations/2014_pesUniversity_browserBasedDigitalPreservation.pptx">Doctoral Student Presenter</a>, “Browser-Based Digital Preservation” for Visiting <a href="http://pes.edu/">PES University</a> Students, Old Dominion University, July 2014.</li>
         <li>Acknowledged Contributor, <a href="https://tools.ietf.org/html/rfc7089">RFC7089: HTTP Framework for Time-Based Access to Resource States -- Memento</a>, December 2013.</li>
