Another Fall semester.

--- a/index.html
+++ b/index.html
@@ -146,6 +146,11 @@
     <section id="courseworkHistory">
       <h2>Coursework History</h2>
       <ul>
+        <li class="oduphd">Fall 2017
+          <ul>
+            <li>CS899 - Doctoral Dissertation (<a href="http://www.cs.odu.edu/~mweigle/">Dr. Michele C. Weigle</a>)</li>
+          </ul>
+        </li>
         <li class="oduphd">Summer 2017
           <ul>
             <li>CS899 - Doctoral Dissertation (<a href="http://www.cs.odu.edu/~mweigle/">Dr. Michele C. Weigle</a>)</li>
