Fix iipc hackathon and link to archived version.

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <li>Participant and Presenter, <a href="http://archivesunleashed.com/au4-0-british-invasion/">Archives Unleashed 4.0: Web Archive Datathon</a>, June 2017.</li>
         <li>Reviewer, <a href="http://accessconference.ca/">Access 2017</a>, May 2017.</li>
         <li>Scholarship Awardee, <a href="https://www.rjionline.org/stories/graduate-students-receive-scholarships-to-attend-digital-news-preservati">Donald W. Reynolds Journalism Institute</a>, October 2016.</li>
-        <li>Participant, <a href="http://www.netpreserve.org/events/iipc-crawler-hackathon-london-2016">IIPC “Building Better Crawlers” Hackathon</a>, September 2016.</li>
+        <li>Participant, <a href="http://web.archive.org/web/20170316134941/http://netpreserve.org/events/iipc-crawler-hackathon-london-2016">IIPC “Building Better Crawlers” Hackathon</a>, September 2016.</li>
         <li>Invited Participant and Presenter, <a href="http://archivesunleashed.com/au2-0-library-of-congress/">Archives Unleashed 2.0: Web Archive Datathon</a>, June 2016.</li>
         <li>Invited Participant, <a href="http://archivesunleashed.ca">Archives Unleashed: Web Archive Hackathon</a>, March 2016.</li>
         <li>Sole Presenter, Old Dominion University Department of Computer Science PhD Gathering, November 2015.</li>
@@ -411,7 +411,7 @@
         <li><a href="http://matkelly.com/wail"><em>Web Archiving Integration Layer (WAIL)</em></a> - One-Click User Instigated Preservation.</li>
         <li><a href="http://matkelly.com/warcreate"><em>WARCreate</em></a> - Google Chrome extension to allow a user to create a Web ARCive (WARC) file from any webpage.</li>
         <li><a href="http://www.cs.odu.edu/~mkelly/reversearchiveit/reverseArchiveIt05102011.crx"><em>Reverse Archive-It</em></a> - Quick prototype to determine the collections to which a webpage has been associated by <a href="https://archive-it.org">Archive-It</a>. (<a href="http://www.cs.odu.edu/~mkelly/reversearchiveit/reverseArchiveItDemo.avi">video demo</a>)</li>
-        <li><a href="https://addons.mozilla.org/en-US/firefox/addon/archivefacebook/"><em>ArchiveFacebook</em></a> - Mozilla Firefox add-on to allow a user to easily download and save the contents of his/her Facebook profile.</li>
+        <li><a href="http://web.archive.org/web/20161105172422/https://addons.mozilla.org/en-US/firefox/addon/archivefacebook/"><em>ArchiveFacebook</em></a> - Mozilla Firefox add-on to allow a user to easily download and save the contents of his/her Facebook profile (development discontinued).</li>
     </ul>
 </section>
 
