--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="description" content="Academic Homepage of Mat Kelly, Doctoral Degree student at Old Dominion University in Norfolk, Virginia." />
+    <meta name="description" content="Homepage of Mat Kelly, Doctoral Degree student at Old Dominion University in Norfolk, Virginia." />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#031fc9" />
     <!--[if lt IE 9]>
@@ -11,6 +11,8 @@
     <title>Mat Kelly, PhD Student of Computer Science, Old Dominion University in Norfolk, Virginia</title>
     <link rel="stylesheet" href="style.css" media="all" />
     <link rel="author" href="https://plus.google.com/u/0/103717513886594190386" />
+    <link rel="me" href="https://twitter.com/machawk1" />
+    <link rel="me" href="https://github.com/machawk1" />
     <script src="_js/html2canvas.js"></script>
     <script src="index.js"></script>
     <style type="text/css">
