Favicon via theme

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="author" href="https://plus.google.com/u/0/103717513886594190386" />
     <link rel="me" href="https://twitter.com/machawk1" />
     <link rel="me" href="https://github.com/machawk1" />
+    <link rel="icon" sizes="192x192" href="images/favicon192.png">
     <script src="_js/html2canvas.js"></script>
     <script src="index.js"></script>
     <style type="text/css">
