--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
       <h1 itemprop="name">Mat Kelly</h1>
       <h2 itemprop="title">PhD Student, Computer Science</h2>
-      <h3 itemprop="affiliation"><a href="http://ws-dl.cs.odu.edu" target="_blank">Web Science &amp; Digital Libraries Research Group</a></h3>
+      <h3 itemprop="affiliation"><a href="http://ws-dl.cs.odu.edu" target="_blank" rel="external">Web Science &amp; Digital Libraries Research Group</a></h3>
       <h3 itemprop="affiliation"><a href="https://odu.edu/" target="_blank">Old Dominion University</a> &bull; Norfolk, Virginia &bull; USA</h3>
       <!--<a href="http://www.cs.odu.edu/~mkelly" onclick="screenshotTest();return false;">
         <img src="amish.jpg" alt="mug shot" id="openMenu" itemprop="photo" />
