NEH Grant done.

--- a/index.html
+++ b/index.html
@@ -55,9 +55,8 @@
     <section id="currentProjects">
       <h2>Current/Upcoming Projects</h2>
         <ul>
-          <li>Research and paper development on various aspects of personal web archiving.</li>
-          <li>Finalizing development tasks of <a href="http://warcreate.com">WARCreate</a>, <a href="http://matkelly.com/wail">Web Archiving Integration Layer (WAIL)</a>, and <a href="https://github.com/machawk1/mink">Mink</a> for <a href="http://www.neh.gov/divisions/odh/grant-news/announcing-seven-digital-humanities-implementation-grants-july-2014">NEH Digital Humanities Implementation Grant</a>.</li>
-          <li>Continued development of <a href="http://github.com/oduwsdl/ipwb">InterPlanetary Wayback (ipwb)</a>.</li>
+          <li>Dissertation research on personal and private web archiving.</li>
+          <li>Continued development of <a href="http://github.com/oduwsdl/ipwb">InterPlanetary Wayback (ipwb)</a>, <a href="http://warcreate.com">WARCreate</a>, <a href="http://matkelly.com/wail">Web Archiving Integration Layer (WAIL)</a>, and <a href="https://github.com/machawk1/mink">Mink</a>.</li>
         </ul>
     </section>
 
