--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 
       <h1 itemprop="name">Mat Kelly</h1>
       <h2 itemprop="title">PhD Student, Computer Science</h2>
-      <h3 itemprop="affiliation"><a href="http://ws-dl.cs.odu.edu" target="_blank" rel="external">Web Science &amp; Digital Libraries Research Group</a></h3>
-      <h3 itemprop="affiliation"><a href="https://odu.edu/" target="_blank">Old Dominion University</a> &bull; Norfolk, Virginia &bull; USA</h3>
+      <h3 itemprop="affiliation"><a href="http://ws-dl.cs.odu.edu" target="_blank" rel="external noopener noreferrer">Web Science &amp; Digital Libraries Research Group</a></h3>
+      <h3 itemprop="affiliation"><a href="https://odu.edu/" target="_blank noopener noreferrer">Old Dominion University</a> &bull; Norfolk, Virginia &bull; USA</h3>
       <!--<a href="http://www.cs.odu.edu/~mkelly" onclick="screenshotTest();return false;">
         <img src="amish.jpg" alt="mug shot" id="openMenu" itemprop="photo" />
       </a>//future work -->
@@ -48,7 +48,7 @@
         <li><a href="#courseworkHistory">Coursework History</a></li>
         <li><a href="#projects">Recent Software Projects</a></li>
         <li><a href="#contact">Contact</a></li>
-        <li id="cv"><a target="_blank" href="http://matkelly.com/cv">C.V.</a></li>
+        <li id="cv"><a target="_blank noopener noreferrer" href="http://matkelly.com/cv">C.V.</a></li>
       </ul>
     </nav>
 
