Aaaand it's Spring semester.

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     <section id="recognitionAndParticipation">
       <h2>Recognition &amp; Participation</h2>
       <ul>
-        <li>Organizing Committee, <a href="https://2018.jcdl.org/organizing%20committee">Publicity Chair</a>, <a href="https://2018.jcdl.org/">Joint Conference on Digital Libraries (JCDL) 2018</a>.</li>
+        <li>Organizing Committee, <a href="https://2018.jcdl.org/organizing_committee">Publicity Chair</a>, <a href="https://2018.jcdl.org/">Joint Conference on Digital Libraries (JCDL) 2018</a>.</li>
         <li><a href="http://jcdl.org/awards.php">Best Poster</a> for <a href="papers/2017_jcdl_countingMementos.pdf">“Impact of URI Canonicalization on Memento Count”</a> at the ACM/IEEE Joint Conference on Digital Libraries (JCDL), June 2017.</li>
         <li>Participant and Presenter, <a href="http://archivesunleashed.com/au4-0-british-invasion/">Archives Unleashed 4.0: Web Archive Datathon</a>, June 2017.</li>
         <li>Reviewer, <a href="http://accessconference.ca/">Access 2017</a>, May 2017.</li>
@@ -148,6 +148,11 @@
     <section id="courseworkHistory">
       <h2>Coursework History</h2>
       <ul>
+        <li class="oduphd">Spring 2018
+          <ul>
+            <li>CS899 - Doctoral Dissertation (<a href="http://www.cs.odu.edu/~mweigle/">Dr. Michele C. Weigle</a>)</li>
+          </ul>
+        </li>
         <li class="oduphd">Fall 2017
           <ul>
             <li>CS899 - Doctoral Dissertation (<a href="http://www.cs.odu.edu/~mweigle/">Dr. Michele C. Weigle</a>)</li>
