--- a/index.html
+++ b/index.html
@@ -23,11 +23,13 @@
 
         }
         #thumbnailFrame {height: 100px; overflow: hidden;}
+        .otaygugel {display: none;}
     </style>
   </head>
 
   <body>
     <header itemscope itemtype="http://data-vocabulary.org/Person">
+    <p class="otaygugel">PhD Student of Computer Science at ODU in Norfolk, Virginia, USA</p>
 
         <img src="mofro.png" alt="mug shot" id="mugShot" itemprop="photo" />
 
@@ -69,6 +71,9 @@
           <li><a id="ppp_j">Only Journals</a></li>
         </ul>
         <ul id="ppp">
+          <li class="paper longPaper peerReviewed"><em class="me">Mat Kelly</em>, Michael L. Nelson, and Michele C. Weigle, “A Framework for Aggregating Private and Public Web Archives”, Accepted for Publication In <em>Proceedings of the ACM/IEEE Joint Conference on Digital Libraries (JCDL)</em>. Fort Worth, Texas, June 2018.</li>
+          <li class="poster peerReviewed">Mohamed Aturban, <em class="me">Mat Kelly</em>, Sawood Alam, John A. Berlin, Michael L. Nelson, and Michele C. Weigle, “ArchiveNow: Simplified, Extensible, Multi-Archive Preservation”, Accepted for Publication In <em>Proceedings of the ACM/IEEE Joint Conference on Digital Libraries (JCDL)</em>. Fort Worth, Texas, June 2018.</li>
+          <li class="poster peerReviewed">Sawood Alam, <em class="me">Mat Kelly</em>, Michele C. Weigle and Michael L. Nelson, “Unobtrusive and Extensible Archival Replay Banners Using Custom Elements”, Accepted for Publication In <em>Proceedings of the ACM/IEEE Joint Conference on Digital Libraries (JCDL)</em>. Fort Worth, Texas, June 2018.</li>
           <li class="poster workshop"><em class="me">Mat Kelly</em>, Lulwah M. Alkwai, Sawood Alam, Michael L. Nelson, Michele C. Weigle, and Herbert Van de Sompel, “Impact of URI Canonicalization on Memento Count,” Presented at the <em>Web Archiving and Digital Libraries Workshop (WADL 2017)</em>. Toronto, Canada, June 2017. (<a href="papers/2017_wadl_countingMementos.pdf">PDF</a>)</li>
           <li class="poster workshop">Sawood Alam, <em class="me">Mat Kelly</em>, Michele C. Weigle, and Michael L. Nelson, “Avoiding Zombies in Archival Replay Using ServiceWorker,” Presented at the <em>Web Archiving and Digital Libraries Workshop (WADL 2017)</em>. Toronto, Canada, June 2017. (<a href="papers/2017_wadl_serviceWorkers.pdf">PDF</a>)</li>
           <li class="poster peerReviewed"><em class="me">Mat Kelly</em>, Lulwah M. Alkwai, Sawood Alam, Michael L. Nelson, Michele C. Weigle, and Herbert Van de Sompel, “Impact of URI Canonicalization on Memento Count,” In <em>Proceedings of the ACM/IEEE Joint Conference on Digital Libraries (JCDL)</em>. Toronto, Canada, June 2017, pp. 303-304.  <em class="best">Best Poster Award</em>. (<a href="http://www.cs.odu.edu/~mkelly/papers/2017_jcdl_countingMementos.pdf">PDF</a>, <a href="publications/kelly-jcdl2017.bib">BibTeX</a>)</li>
@@ -115,6 +120,7 @@
     <section id="recognitionAndParticipation">
       <h2>Recognition &amp; Participation</h2>
       <ul>
+        <li>Reviewer, <a href="https://2018.jcdl.org/">Joint Conference on Digital Libraries (JCDL) 2018</a>, January 2018.</li>
         <li>Organizing Committee, <a href="https://2018.jcdl.org/organizing_committee">Publicity Chair</a>, <a href="https://2018.jcdl.org/">Joint Conference on Digital Libraries (JCDL) 2018</a>.</li>
         <li><a href="http://jcdl.org/awards.php">Best Poster</a> for <a href="papers/2017_jcdl_countingMementos.pdf">“Impact of URI Canonicalization on Memento Count”</a> at the ACM/IEEE Joint Conference on Digital Libraries (JCDL), June 2017.</li>
         <li>Participant and Presenter, <a href="http://archivesunleashed.com/au4-0-british-invasion/">Archives Unleashed 4.0: Web Archive Datathon</a>, June 2017.</li>
@@ -428,6 +434,7 @@
         <li>mkelly at cs.odu.edu (E-mail)</li>
         <li><a href="https://twitter.com/machawk1" rel="me">@machawk1</a> (Twitter)</li>
         <li><a href="https://github.com/machawk1" rel="me">@machawk1</a> (GitHub)</li>
+        <li><a href="https://scholar.google.com/citations?user=ehg7mloAAAAJ">Mat Kelly @ Google Scholar</a></li>
         <li><a href="http://orcid.org/0000-0002-0236-7389">orcid:0000-0002-0236-7389</a></li>
     </ul>
     <!--<p>Further information including employment history can be found at <a href="http://matkelly.com" rel="me">matkelly.com</a></p>-->
