OLs per @phonedude

--- a/postdoc.html
+++ b/postdoc.html
@@ -198,9 +198,9 @@
       </ul>
       <h3>Additional Outreach</h3>
       <h4>Web Science and Digital Libraries (WS-DL) Research Group Blog</h4>
-      <ul class="flushTop">
+      <ol class="flushTop">
           <li class="compList" id="blags"><a href="#" onclick="showAllBlagPosts(); return false;">Show <span id="blogHiddenCount">23</span> other research blog posts</a>.</li>
-      </ul>
+      </ol>
     </section>
 
     <section id="awards">
