Add spring, change orcid link, other small typos

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="description" content="Homepage of Mat Kelly, Doctoral Degree student at Old Dominion University in Norfolk, Virginia." />
+    <meta name="description" content="Homepage of Mat Kelly, PhD Candidate of Computer Science at Old Dominion University in Norfolk, Virginia." />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#031fc9" />
     <!--[if lt IE 9]>
@@ -13,6 +13,16 @@
     <link rel="author" href="https://plus.google.com/u/0/103717513886594190386" />
     <link rel="me" href="https://twitter.com/machawk1" />
     <link rel="me" href="https://github.com/machawk1" />
+    <link rel="canonical" href="https://matkelly.com/" />
+    
+    <!-- Twitter Card data -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@machawk1">
+    <meta name="twitter:title" content="Mat Kelly">
+    <meta name="twitter:description" content="Academic homepage of Mat Kelly, PhD Candidate of Computer Science at Old Dominion University.">
+    <meta name="twitter:creator" content="@machawk1">
+    <meta name="twitter:image" content="https://www.cs.odu.edu/~mkelly/twitterCard.png">
+
     <link rel="icon" sizes="192x192" href="images/favicon192.png">
     <link rel="apple-touch-icon" sizes="192x192" href="images/favicon192.png">
     <!--<script src="_js/html2canvas.js"></script>-->
@@ -80,7 +90,7 @@
           <li><a id="ppp_a">Only Awarded</a></li>
         </ul>
         <ul id="ppp" class="unfiltered">
-          <li class="presentation">Sawood Alam, <em class="me">Mat Kelly</em>, Michele C. Weigle, and Michael L. Nelson, “InterPlanetary Wayback: The Next Step Towards Decentralized Web Archiving,” Presented at the <em>Decentralized Web Summit</em>, San Francisco, California, August 2018. </li>
+          <li class="presentation">Sawood Alam, <em class="me">Mat Kelly</em>, Michele C. Weigle, and Michael L. Nelson, “InterPlanetary Wayback: The Next Step Towards Decentralized Web Archiving,” Presented at the <em>Decentralized Web Summit</em>, San Francisco, California, August 2018. (<a href="https://www.cs.odu.edu/~mkelly/presentations/2018_dweb_ipwb.pdf">Slides</a>)</li>
           <li class="paper workshop"><em class="me">Mat Kelly</em>, Sawood Alam, Michael L. Nelson, and Michele C. Weigle, “Client-Assisted Memento Aggregation Using the Prefer Header,” Presented at the <em>Web Archiving and Digital Libraries Workshop (WADL 2018)</em>, Fort Worth, Texas, June 2018. (<a href="papers/2018_wadl_preferData.pdf">PDF</a>)</li>
           <li class="poster workshop">Sawood Alam, <em class="me">Mat Kelly</em>, Michele C. Weigle, and Michael L. Nelson, “A Survey of Archival Replay Banners,” Presented at the <em>Web Archiving and Digital Libraries Workshop (WADL 2018)</em>, Fort Worth, Texas, June 2018. (<a href="papers/2018_wadl_banners.pdf">PDF</a>)</li>
           <li class="paper longPaper peerReviewed award"><em class="me">Mat Kelly</em>, Michael L. Nelson, and Michele C. Weigle, “A Framework for Aggregating Private and Public Web Archives,” In <em>Proceedings of the ACM/IEEE Joint Conference on Digital Libraries (JCDL)</em>, Fort Worth, Texas, June 2018, pp. 273-282. <em class="best">Best Paper Award Nominee</em>. (<a href="papers/2018_jcdl_hierarchy.pdf">PDF</a>, <a href="publications/kelly-jcdl2018.bib">BibTeX</a>)</li>
@@ -168,6 +178,11 @@
     <section id="courseworkHistory">
       <h2>Coursework History</h2>
       <ul>
+        <li class="oduphd">Spring 2019
+          <ul>
+            <li>CS899 - Doctoral Dissertation (<a href="http://www.cs.odu.edu/~mweigle/">Dr. Michele C. Weigle</a>)</li>
+          </ul>
+        </li>
         <li class="oduphd">Fall 2018
           <ul>
             <li>CS899 - Doctoral Dissertation (<a href="http://www.cs.odu.edu/~mweigle/">Dr. Michele C. Weigle</a>)</li>
@@ -459,7 +474,7 @@
         <li><a href="https://twitter.com/machawk1" rel="me">@machawk1</a> (Twitter)</li>
         <li><a href="https://github.com/machawk1" rel="me">@machawk1</a> (GitHub)</li>
         <li><a href="https://scholar.google.com/citations?user=ehg7mloAAAAJ">Mat Kelly @ Google Scholar</a></li>
-        <li><a href="https://orcid.org/0000-0002-0236-7389">orcid:0000-0002-0236-7389</a></li>
+        <li><a href="https://matkelly.com/orcid">orcid:0000-0002-0236-7389</a></li>
     </ul>
 </section>
 
