--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
       <ul>
         <li>Reviewer, <a href="https://link.springer.com/journal/799">International Journal on Digital Libraries (IJDL)</a>, 2018.</li>
         <li>Best Paper Finalist for <a href="papers/2018_jcdl_hierarchy.pdf">“A Framework for Aggregating Private and Public Web Archives”</a> at the ACM/IEEE Joint Conference on Digital Libraries (JCDL), June 2018.</li>
+        <li><a href="http://jcdl.org/awards.php">Best Poster</a> for <a href="papers/2018_jcdl_archivenow.pdf">“ArchiveNow: Simplified, Extensible, Multi-Archive Preservation”</a> at the ACM/IEEE Joint Conference on Digital Libraries (JCDL), June 2018.</li>
         <li>Reviewer, <a href="https://2018.jcdl.org/">Joint Conference on Digital Libraries (JCDL) 2018</a>, January 2018.</li>
         <li>Organizing Committee, <a href="https://2018.jcdl.org/organizing_committee">Publicity Chair</a>, <a href="https://2018.jcdl.org/">Joint Conference on Digital Libraries (JCDL) 2018</a>.</li>
         <li><a href="http://jcdl.org/awards.php">Best Poster</a> for <a href="papers/2017_jcdl_countingMementos.pdf">“Impact of URI Canonicalization on Memento Count”</a> at the ACM/IEEE Joint Conference on Digital Libraries (JCDL), June 2017.</li>
