--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
     <title>Mat Kelly, PhD Candidate of Computer Science, Old Dominion University in Norfolk, Virginia</title>
     <link rel="stylesheet" href="style.css" media="all" />
     <link rel="author" href="https://plus.google.com/u/0/103717513886594190386" />
+
     <link rel="me" href="https://twitter.com/machawk1" />
     <link rel="me" href="https://github.com/machawk1" />
+    <link rel="me" href="https://digipres.club/@machawk1" />
+
     <link rel="canonical" href="https://matkelly.com/" />
     
     <!-- Twitter Card data -->
@@ -54,10 +57,9 @@
       <h2 itemprop="title">PhD Candidate, Computer Science</h2>
       <h3 itemprop="affiliation"><a href="https://ws-dl.cs.odu.edu" target="_blank" rel="external noopener noreferrer">Web Science &amp; Digital Libraries Research Group</a></h3>
       <h3 itemprop="affiliation"><a href="https://odu.edu/" target="_blank" rel="external noopener noreferrer">Old Dominion University</a> &bull; Norfolk, Virginia &bull; USA</h3>
-      <!--<a href="http://www.cs.odu.edu/~mkelly" onclick="screenshotTest();return false;">
-        <img src="amish.jpg" alt="mug shot" id="openMenu" itemprop="photo" />
-      </a>//future work -->
-      <a id="glider" href="https://ws-dl.cs.odu.edu"  target="_blank" rel="external noopener noreferrer"><img src="images/glider.png" alt="WS-DL Glider logo" /></a>
+      <h3 id="advisor">PhD Advisor: <a href=
+      "https://www.cs.odu.edu/~mweigle/" target="_blank" rel="external noopener noreferrer">Dr. Michele C. Weigle</a> <span>&bull;</span> Co-Advisor: <a href="https://www.cs.odu.edu/~mln/" target="_blank" rel="external noopener noreferrer">Dr. Michael L. Nelson</a></h3> 
+      <a id="glider" href="https://ws-dl.cs.odu.edu"  target="_blank" rel="external noopener noreferrer"><img src="images/glider126.png" alt="WS-DL Glider logo" /></a>
     </header>
     <nav>
       <ul id="sections">
@@ -65,7 +67,7 @@
         <li><a href="#papersPostersAndPresentations">Papers, Posters &amp; Presentations</a></li>
         <li><a href="#recognitionAndParticipation">Recognition &amp; Participation</a></li>
         <li><a href="#teaching">Teaching</a></li>
-        <li><a href="#courseworkHistory">Coursework History</a></li>
+        <li class="hide"><a href="#courseworkHistory">Coursework History</a></li>
         <li><a href="#projects">Recent Software Projects</a></li>
         <li><a href="#contact">Contact</a></li>
         <li id="cv"><a target="_blank" rel="noopener noreferrer" href="https://matkelly.com/cv">C.V.</a></li>
@@ -75,7 +77,7 @@
     <section id="currentProjects">
       <h2>Current/Upcoming Projects</h2>
         <ul>
-          <li>Dissertation research on personal and private web archiving.</li>
+          <li>Finalizing dissertation defense slides post-defense.</li>
           <li>Continued development of <a href="https://github.com/oduwsdl/ipwb">InterPlanetary Wayback (ipwb)</a>, <a href="https://warcreate.com">WARCreate</a>, <a href="https://matkelly.com/wail">Web Archiving Integration Layer (WAIL)</a>, and <a href="https://github.com/machawk1/mink">Mink</a>.</li>
         </ul>
     </section>
@@ -180,7 +182,7 @@
       </ul>
     </section>
 
-    <section id="courseworkHistory">
+    <section id="courseworkHistory" class="hide">
       <h2>Coursework History</h2>
       <ul>
         <li class="oduphd">Spring 2019
