Add dark mode adaptation.

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <h3 itemprop="affiliation"><a href="https://odu.edu/" target="_blank" rel="external noopener noreferrer">Old Dominion University</a> &bull; Norfolk, Virginia &bull; USA</h3>
       <h3 id="advisor">PhD Advisor: <a href=
       "https://www.cs.odu.edu/~mweigle/" target="_blank" rel="external noopener noreferrer">Dr. Michele C. Weigle</a> <span>&bull;</span> Co-Advisor: <a href="https://www.cs.odu.edu/~mln/" target="_blank" rel="external noopener noreferrer">Dr. Michael L. Nelson</a></h3> 
-      <a id="glider" href="https://ws-dl.cs.odu.edu"  target="_blank" rel="external noopener noreferrer"><img src="images/glider126.png" alt="WS-DL Glider logo" /></a>
+      <a id="glider" href="https://ws-dl.cs.odu.edu"  target="_blank" rel="external noopener noreferrer"><img src="images/glider126-trans.png" alt="WS-DL Glider logo" /></a>
     </header>
     <nav>
       <ul id="sections">
@@ -77,7 +77,7 @@
     <section id="currentProjects">
       <h2>Current/Upcoming Projects</h2>
         <ul>
-          <li>Finalizing dissertation after having successfully defended on May 7, 2019.</li>
+          <li>Preparing for new position as Assistant Professor at <a href="https://drexel.edu/cci/">Drexel University College of Computing &amp; Informatics</a> (September 2019).</li>
           <li>Continued development of <a href="https://github.com/oduwsdl/ipwb">InterPlanetary Wayback (ipwb)</a>, <a href="https://warcreate.com">WARCreate</a>, <a href="https://matkelly.com/wail">Web Archiving Integration Layer (WAIL)</a>, and <a href="https://github.com/machawk1/mink">Mink</a>.</li>
         </ul>
     </section>
@@ -482,6 +482,9 @@
         <li><a href="https://github.com/machawk1" rel="me">@machawk1</a> (GitHub)</li>
         <li><a href="https://scholar.google.com/citations?user=ehg7mloAAAAJ">Mat Kelly @ Google Scholar</a></li>
         <li><a href="https://matkelly.com/orcid">orcid:0000-0002-0236-7389</a></li>
+        <li>ResearcherID: <a href="https://publons.com/researcher/1803741/mat-kelly/">A-3809-2019</a></li>
+        <li><a href="https://www.semanticscholar.org/author/Mat-Kelly/33277833?q=&sort=influence">Mat Kelly @ Semantic Scholar</a></li>
+        <li><a href="https://academic.microsoft.com/profile/15627813-12j0-4h91-8fh2-18h013ee767f/machawk1/publication/search?q=Mat%20Kelly&qe=%2540%2540%2540USER.PUBLICATIONS%253D15627813-12f0-4d91-8bd2-18d013aa767b&f=&orderBy=0">Mat Kelly @ Microsoft Academic</a></li>        
     </ul>
 </section>
 
