--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="description" content="Homepage of Mat Kelly, PhD Candidate of Computer Science at Old Dominion University in Norfolk, Virginia." />
+    <meta name="description" content="Homepage of Mat Kelly, PhD of Computer Science at Old Dominion University in Norfolk, Virginia." />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#031fc9" />
     <!--[if lt IE 9]>
         <script src="_js/html5shiv.js"></script>
     <![endif]-->
-    <title>Mat Kelly, PhD Candidate of Computer Science, Old Dominion University in Norfolk, Virginia</title>
+    <title>Mat Kelly, PhD of Computer Science, Old Dominion University in Norfolk, Virginia</title>
     <link rel="stylesheet" href="style.css" media="all" />
     <link rel="author" href="https://plus.google.com/u/0/103717513886594190386" />
 
@@ -22,7 +22,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@machawk1">
     <meta name="twitter:title" content="Mat Kelly">
-    <meta name="twitter:description" content="Academic homepage of Mat Kelly, PhD Candidate of Computer Science at Old Dominion University.">
+    <meta name="twitter:description" content="Academic homepage of Mat Kelly, PhD of Computer Science at Old Dominion University.">
     <meta name="twitter:creator" content="@machawk1">
     <meta name="twitter:image" content="https://www.cs.odu.edu/~mkelly/twitterCard.png">
 
@@ -49,12 +49,12 @@
 
   <body>
     <header itemscope itemtype="https://schema.org/Person">
-    <p class="otaygugel">PhD Candidate of Computer Science at ODU in Norfolk, Virginia, USA</p>
+    <p class="otaygugel">PhD of Computer Science at ODU in Norfolk, Virginia, USA</p>
 
         <img src="mofro.png" alt="mug shot" id="mugShot" itemprop="photo" />
 
       <h1 itemprop="name">Mat Kelly</h1>
-      <h2 itemprop="title">PhD Candidate, Computer Science</h2>
+      <h2 itemprop="title">PhD, Computer Science</h2>
       <h3 itemprop="affiliation"><a href="https://ws-dl.cs.odu.edu" target="_blank" rel="external noopener noreferrer">Web Science &amp; Digital Libraries Research Group</a></h3>
       <h3 itemprop="affiliation"><a href="https://odu.edu/" target="_blank" rel="external noopener noreferrer">Old Dominion University</a> &bull; Norfolk, Virginia &bull; USA</h3>
       <h3 id="advisor">PhD Advisor: <a href=
