--- a/index.html
+++ b/index.html
@@ -2,13 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="description" content="Homepage of Mat Kelly, PhD of Computer Science at Old Dominion University in Norfolk, Virginia." />
+    <meta name="description" content="Homepage of Mat Kelly, Assistant Professor of Information Science, Drexel University in Philadelphia, Pennsylvania." />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#031fc9" />
-    <!--[if lt IE 9]>
-        <script src="_js/html5shiv.js"></script>
-    <![endif]-->
-    <title>Mat Kelly, PhD of Computer Science, Old Dominion University in Norfolk, Virginia</title>
+    <title>Mat Kelly, Assistant Professor of Information Science, Drexel University in Philadelphia, Pennsylvania</title>
     <link rel="stylesheet" href="style.css" media="all" />
     <link rel="author" href="https://plus.google.com/u/0/103717513886594190386" />
 
@@ -22,9 +19,9 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@machawk1">
     <meta name="twitter:title" content="Mat Kelly">
-    <meta name="twitter:description" content="Academic homepage of Mat Kelly, PhD of Computer Science at Old Dominion University.">
+    <meta name="twitter:description" content="Academic homepage of Mat Kelly, Assistant Professor of Information Science at Drexel University.">
     <meta name="twitter:creator" content="@machawk1">
-    <meta name="twitter:image" content="https://www.cs.odu.edu/~mkelly/twitterCard.png">
+    <meta name="twitter:image" content="http://www.pages.drexel.edu/~mrk335/twitterCard.png">
 
     <link rel="icon" sizes="192x192" href="images/favicon192.png">
     <link rel="apple-touch-icon" sizes="192x192" href="images/favicon192.png">
@@ -39,27 +36,28 @@
         #thumbnailFrame {height: 100px; overflow: hidden;}
         .otaygugel {display: none;}
         
-        #glider img {position: fixed; width: 126px; bottom: 5px; right: 37px; margin: 0; padding: 0; opacity: 0.9;}
+        #glider img {position: fixed; width: 126px; bottom: 5px; right: 37px; margin: 0; padding: 0; opacity: 0.9; display: none;}
         #glider img:hover {opacity: 1.0;}
         @media only screen and (min-width: 100px) and (max-width: 650px) {
           #glider {display: none;}
         }
     </style>
+    <base href="https://www.cs.odu.edu/~mkelly/"> <!-- Just until large PDFs find a new home. -->
   </head>
 
   <body>
     <header itemscope itemtype="https://schema.org/Person">
-    <p class="otaygugel">PhD of Computer Science at ODU in Norfolk, Virginia, USA</p>
+    <p class="otaygugel">Assistant Professor of Computer Science at Drexel University in Philadelphia, Pennsylvania, USA</p>
 
         <img src="mofro.png" alt="mug shot" id="mugShot" itemprop="photo" />
 
       <h1 itemprop="name">Mat Kelly</h1>
-      <h2 itemprop="title">PhD, Computer Science</h2>
-      <h3 itemprop="affiliation"><a href="https://ws-dl.cs.odu.edu" target="_blank" rel="external noopener noreferrer">Web Science &amp; Digital Libraries Research Group</a></h3>
-      <h3 itemprop="affiliation"><a href="https://odu.edu/" target="_blank" rel="external noopener noreferrer">Old Dominion University</a> &bull; Norfolk, Virginia &bull; USA</h3>
-      <h3 id="advisor">PhD Advisor: <a href=
+      <h2 itemprop="title">Assistant Professor, Information Science</h2>
+      <h3 itemprop="affiliation"><a href="https://drexel.edu/cci/"  target="_blank" rel="external noopener noreferrer">College of Computing &amp; Informatics</h3></h3>
+      <h3 itemprop="affiliation"><a href="https://drexel.edu" target="_blank" rel="external noopener noreferrer">Drexel University</a> &bull; Philadelphia, Pennsylvania &bull; USA</h3>
+      <!--<h3 id="advisor">PhD Advisor: <a href=
       "https://www.cs.odu.edu/~mweigle/" target="_blank" rel="external noopener noreferrer">Dr. Michele C. Weigle</a> <span>&bull;</span> Co-Advisor: <a href="https://www.cs.odu.edu/~mln/" target="_blank" rel="external noopener noreferrer">Dr. Michael L. Nelson</a></h3> 
-      <a id="glider" href="https://ws-dl.cs.odu.edu"  target="_blank" rel="external noopener noreferrer"><img src="images/glider126-trans.png" alt="WS-DL Glider logo" /></a>
+      <a id="glider" href="https://ws-dl.cs.odu.edu"  target="_blank" rel="external noopener noreferrer"><img src="images/glider126-trans.png" alt="WS-DL Glider logo" /></a>-->
     </header>
     <nav>
       <ul id="sections">
@@ -77,7 +75,7 @@
     <section id="currentProjects">
       <h2>Current/Upcoming Projects</h2>
         <ul>
-          <li>Preparing for new position as Assistant Professor at <a href="https://drexel.edu/cci/">Drexel University College of Computing &amp; Informatics</a> (September 2019).</li>
+          <li>Refining course content for INFO 600: Web Systems &amp; Architecture (Fall 2019) at <a href="https://drexel.edu/cci/">Drexel University</a>.</li>
           <li>Continued development of <a href="https://github.com/oduwsdl/ipwb">InterPlanetary Wayback (ipwb)</a>, <a href="https://warcreate.com">WARCreate</a>, <a href="https://matkelly.com/wail">Web Archiving Integration Layer (WAIL)</a>, and <a href="https://github.com/machawk1/mink">Mink</a>.</li>
         </ul>
     </section>
@@ -144,8 +142,8 @@
     <section id="recognitionAndParticipation">
       <h2>Recognition &amp; Participation</h2>
       <ul>
-        <li>Invited Guest Presenter, “<a href="presentations/2019_psu_aframework.pdf" target="_blank">A Framework for Aggregating Private and Public Web Archives</a>”, <a href="http://wang.ist.psu.edu/docs/home.shtml">James Z. Wang</a>'s Data Science course, Penn State University, February 2019.</li>
-        <li>Invited Guest Presenter, “<a href="presentations/2019_psu_tools.pdf" target="_blank">On Tool Building and Evaluation of the Archived Web</a>”, <a href="http://clgiles.ist.psu.edu/IST441/">IST441 - Information Retrieval and Search Engines</a>, Penn State University, February 2019.</li>
+        <li>Invited Guest Presenter, “<a href="presentations/2019_psu_aframework.pdf" target="_blank" rel="external noopener noreferrer">A Framework for Aggregating Private and Public Web Archives</a>”, <a href="http://wang.ist.psu.edu/docs/home.shtml">James Z. Wang</a>'s Data Science course, Penn State University, February 2019.</li>
+        <li>Invited Guest Presenter, “<a href="presentations/2019_psu_tools.pdf" target="_blank" rel="external noopener noreferrer">On Tool Building and Evaluation of the Archived Web</a>”, <a href="http://clgiles.ist.psu.edu/IST441/">IST441 - Information Retrieval and Search Engines</a>, Penn State University, February 2019.</li>
         <li>Organizing Committee, <a href="https://2019.jcdl.org/about/organizing-committees/">Publicity Chair</a>, <a href="https://2019.jcdl.org/">Joint Conference on Digital Libraries (JCDL) 2019</a>.</li>
         <li>Reviewer, <a href="https://2019.jcdl.org/">Joint Conference on Digital Libraries (JCDL) 2019</a>, February 2019.</li>
         <li>Reviewer, <a href="https://link.springer.com/journal/799">International Journal on Digital Libraries (IJDL)</a>, 2018.</li>
@@ -178,6 +176,7 @@
     <section id="teaching">
       <h2>Teaching</h2>
       <ul>
+        <li class="drexel">Fall 2019: INFO600 - Web Systems &amp; Architecture</li>
         <li class="oduphd">Spring 2015: <a href="https://www.cs.odu.edu/~mkelly/semester/2015_spring/cs418/">CS418 - Web Programming</a></li>
       </ul>
     </section>
@@ -453,7 +452,7 @@
 
     <h3>Coursework Key</h3>
     <ul>
-        <li class="oduphd">Doctor of Philosophy, Computer Science; Old Dominion University, Norfolk, Virginia, Expected 2019</li>
+        <li class="oduphd">Doctor of Philosophy, Computer Science; Old Dominion University, Norfolk, Virginia, 2019</li>
         <li class="odu">Master of Science, Computer Science; Old Dominion University, Norfolk, Virginia, August 2012</li>
         <li class="citadel">Coursework for Master of Science, Computer Science; The Citadel, Charleston, South Carolina</li>
         <li class="uf">Bachelor of Science, Computer Science; University of Florida, Gainesville, Florida, June 2006</li>
@@ -477,7 +476,7 @@
 <section id="contact">
     <h2>Contact</h2>
     <ul>
-        <li>mkelly at cs.odu.edu (E-mail)</li>
+        <li>mkelly at drexel.edu (E-mail)</li>
         <li><a href="https://twitter.com/machawk1" rel="me">@machawk1</a> (Twitter)</li>
         <li><a href="https://github.com/machawk1" rel="me">@machawk1</a> (GitHub)</li>
         <li><a href="https://scholar.google.com/citations?user=ehg7mloAAAAJ">Mat Kelly @ Google Scholar</a></li>
